bugfix: using postupdate tasks to fix win setenv issue where jre but no jdk